--- a/runtime/Cargo.toml
+++ b/runtime/Cargo.toml
@@ -3,8 +3,8 @@ authors = ['Substrate DevHub <https://github.com/substrate-developer-hub>']
 edition = '2018'
 homepage = 'https://substrate.dev'
 license = 'Unlicense'
-name = 'node-template-runtime'
-repository = 'https://github.com/substrate-developer-hub/substrate-node-template/'
+name = 'pacific-store-runtime'
+repository = 'https://github.com/substrate-developer-hub/substrate-pacific-store/'
 version = '2.0.1'
 
 [package.metadata.docs.rs]
