--- a/pallets/orderbook/Cargo.toml
+++ b/pallets/orderbook/Cargo.toml
@@ -33,7 +33,8 @@ frame-system = { default-features = false, version = '2.0.0' }
 # serde = { version = "1.0.114", optional = true }
 # serde = { features = ['derive'], optional = true, version = '1.0.106' }
 # serde = "1"
-serde = { version = "1.0", default-features = false, features = ['derive'],optional = true }
+# serde = { version = "1.0", default-features = false, features = ['derive'],optional = true }
+serde = { features = ['derive'], optional = true, version = '1.0.119' }
 
 [dev-dependencies]
 sp-core = { default-features = false, version = '2.0.0' }
