--- a/node/Cargo.toml
+++ b/node/Cargo.toml
@@ -28,6 +28,8 @@ orderbook-rpc = { path = "../pallets/orderbook/rpc" }
 orderbook-runtime-api = { path = "../pallets/orderbook/runtime-api" }
 wyvern-exchange-rpc = { path = "../pallets/wyvern-exchange/rpc" }
 wyvern-exchange-runtime-api = { path = "../pallets/wyvern-exchange/runtime-api" }
+wyvern-exchange-core-rpc = { path = "../pallets/wyvern-exchange-core/rpc" }
+wyvern-exchange-core-runtime-api = { path = "../pallets/wyvern-exchange-core/runtime-api" }
 
 # Substrate dependencies
 frame-benchmarking = '2.0.1'
