--- a/pallets/wyvern-exchange-core/Cargo.toml
+++ b/pallets/wyvern-exchange-core/Cargo.toml
@@ -1,17 +1,12 @@
 [package]
-name = 'pallet-orderbook'
+name = 'pallet-wyvern-exchange-core'
 version = '2.0.0'
-description = 'NFT Dex order book'
+description = 'NFT Dex wyvern exchange core'
 edition = '2018'
 authors = ['vlbos <https://github.com/vlbos>']
 homepage = ''
 repository = 'https://github.com/vlbos/orderbook/'
 license = 'Unlicense'
-
-# [dependencies.serde]
-# features = ['derive']
-# optional = true
-# version = '1.0.101'
 
 [dependencies.codec]
 default-features = false
@@ -23,15 +18,28 @@ version = '1.3.4'
 default_features = false
 package = 'pallet-timestamp'
 version = '2.0.0'
+[dependencies.sp-std]
+default-features = false
+version = '2.0.0'
+# [dependencies.proxy]
+# default-features = false
+# # git = 'https://github.com/substrate-developer-hub/pallet-proxy'
+# package = 'pallet-proxy'
+# version = '2.0.1'
+# [dependencies.serde]
+# features = ['derive']
+# optional = true
+# version = '1.0.101'
 
 [dependencies]
 frame-support = { default-features = false, version = '2.0.0' }
 frame-system = { default-features = false, version = '2.0.0' }
-# serde = { version = "1.0.123", default-features = false }
-# serde_derive = { version = "1.0.123", optional = true }
-# serde = { features = ['derive'], optional = true, version = '1.0.116' }
-# serde = { version = "1.0.114", optional = true }
-# serde = { features = ['derive'], optional = true, version = '1.0.106' }
+balances = { package = 'pallet-balances', version = '2.0.0', default-features = false }
+# proxy = { package = 'pallet-proxy', version = '2.0.1', default-features = false }
+# pallet-proxy = { git = "https://github.com/paritytech/substrate", branch = "master", default-features = false }
+# serde = { version = "1.0.121", default-features = false }
+# serde_derive = { version = "1.0.117", optional = true }
+# serde = { version = "1.0.106", optional = true }
 # serde = "1"
 # serde = { version = "1.0", default-features = false, features = ['derive'],optional = true }
 serde = { features = ['derive'], optional = true, version = '1.0.119' }
@@ -40,17 +48,17 @@ serde = { features = ['derive'], optional = true, version = '1.0.119' }
 sp-core = { default-features = false, version = '2.0.0' }
 sp-io = { default-features = false, version = '2.0.0' }
 sp-runtime = { default-features = false, version = '2.0.0' }
-sp-std = {  default-features = false,version = '2.0.0' }
+# sp-std = {  default-features = false,version = '2.0.0' }
 
 [features]
 default = ['std']
 std = [
-# "serde_derive",
-# "serde/std",
-"serde",
+    "serde",
     'codec/std',
     'frame-support/std',
     'frame-system/std',
     'timestamp/std',
-'sp-std/std',
+    # 'sp-std/std',
+    'balances/std',
+    # 'sp-runtime/std',
 ]
