--- a/pallets/orderbook/runtime-api/Cargo.toml
+++ b/pallets/orderbook/runtime-api/Cargo.toml
@@ -1,9 +1,9 @@
 [package]
 name = "orderbook-runtime-api"
 version = "2.0.0"
-authors = ['Substrate DevHub <https://github.com/substrate-developer-hub>']
+authors = ['']
 edition = "2018"
-license = "GPL-3.0-or-later"
+license = "unlicense"
 
 [dependencies]
 sp-api = { version = '2.0.0', default-features = false}
