--- a/pallets/wyvern-exchange-core/Cargo.toml
+++ b/pallets/wyvern-exchange-core/Cargo.toml
@@ -43,9 +43,9 @@ balances = { package = 'pallet-balances', version = '2.0.0', default-features = 
 # serde = "1"
 # serde = { version = "1.0", default-features = false, features = ['derive'],optional = true }
 serde = { features = ['derive'], optional = true, version = '1.0.119' }
+sp-core = { default-features = false, version = '2.0.0' }
 
 [dev-dependencies]
-sp-core = { default-features = false, version = '2.0.0' }
 sp-io = { default-features = false, version = '2.0.0' }
 sp-runtime = { default-features = false, version = '2.0.0' }
 # sp-std = {  default-features = false,version = '2.0.0' }
@@ -60,5 +60,6 @@ std = [
     'timestamp/std',
     # 'sp-std/std',
     'balances/std',
+	"sp-core/std",
     # 'sp-runtime/std',
 ]
