--- a/pallets/wyvern-exchange-core/rpc/Cargo.toml
+++ b/pallets/wyvern-exchange-core/rpc/Cargo.toml
@@ -2,10 +2,10 @@
 name = "wyvern-exchange-core-rpc"
 version = "2.0.0"
 edition = "2018"
-authors = ['Substrate DevHub <https://github.com/substrate-developer-hub>']
-repository = 'https://github.com/substrate-developer-hub/recipes'
-description = "A pallet that demonstrates simple RPC for summing numbers"
-license = "GPL-3.0-or-later"
+authors = ['']
+repository = ''
+description = ""
+license = "unlicense"
 
 [dependencies]
 codec = { package = "parity-scale-codec", version = "1.3.0" }
