--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -2,7 +2,7 @@ version: "3.2"
 
 services:
   dev:
-    image: pacific-store-node
+    image: pacificstore-node
     working_dir: /var/www/pacific-store
     ports:
       - "9944:9944"
