--- a/node/Cargo.toml
+++ b/node/Cargo.toml
@@ -1,26 +1,58 @@
 [package]
-authors = ['Substrate DevHub <https://github.com/substrate-developer-hub>']
-build = 'build.rs'
-description = 'A fresh FRAME-based Substrate node, ready for hacking.'
+name = 'pacific-store'
+version = '2.0.2'
+authors = ['vlbos <https://github.com/vlbos>']
+description = 'A fresh Pacific store node, ready for hacking.'
 edition = '2018'
-homepage = 'https://substrate.dev'
-license = 'Unlicense'
-name = 'pacific-store'
+license = "Unlicense"
+build = "build.rs"
+homepage = 'https://github.com/vlbos/pacificstore-node/'
 repository = 'https://github.com/vlbos/pacificstore-node/'
-version = '2.0.1'
-
-[[bin]]
-name = 'pacific-store'
+publish = false
 
 [package.metadata.docs.rs]
 targets = ['x86_64-unknown-linux-gnu']
 
-[build-dependencies]
-substrate-build-script-utils = '2.0.1'
-
+[[bin]]
+name = 'pacific-store'
+path = "src/main.rs"
 [dependencies]
-jsonrpc-core = '15.0.0'
-structopt = '0.3.8'
+structopt = "0.3.8"
+
+sc-cli = { git = "https://github.com/paritytech/substrate", package = "sc-cli", features = ["wasmtime"] }
+sp-core = { git = "https://github.com/paritytech/substrate", package = "sp-core" }
+sc-executor = { git = "https://github.com/paritytech/substrate", package = "sc-executor", features = ["wasmtime"] }
+sc-service = { git = "https://github.com/paritytech/substrate", package = "sc-service", features = ["wasmtime"] }
+sc-telemetry = { git = "https://github.com/paritytech/substrate", package = "sc-telemetry" }
+sc-keystore = { git = "https://github.com/paritytech/substrate", package = "sc-keystore" }
+sp-inherents = { git = "https://github.com/paritytech/substrate", package = "sp-inherents" }
+sc-transaction-pool = { git = "https://github.com/paritytech/substrate", package = "sc-transaction-pool" }
+sc-transaction-pool-api = { git = "https://github.com/paritytech/substrate", package = "sc-transaction-pool-api" }
+sc-consensus-aura = { git = "https://github.com/paritytech/substrate", package = "sc-consensus-aura" }
+sp-consensus-aura = { git = "https://github.com/paritytech/substrate", package = "sp-consensus-aura" }
+sp-consensus = { git = "https://github.com/paritytech/substrate", package = "sp-consensus" }
+sc-consensus = { git = "https://github.com/paritytech/substrate", package = "sc-consensus" }
+sc-finality-grandpa = { git = "https://github.com/paritytech/substrate", package = "sc-finality-grandpa" }
+sp-finality-grandpa = { git = "https://github.com/paritytech/substrate", package = "sp-finality-grandpa" }
+sc-client-api = { git = "https://github.com/paritytech/substrate", package = "sc-client-api" }
+sp-runtime = { git = "https://github.com/paritytech/substrate", package = "sp-runtime" }
+sp-timestamp = { git = "https://github.com/paritytech/substrate", package = "sp-timestamp" }
+
+# These dependencies are used for the node's RPCs
+jsonrpc-core = "18.0.0"
+sc-rpc = { git = "https://github.com/paritytech/substrate", package = "sc-rpc" }
+sp-api = { git = "https://github.com/paritytech/substrate", package = "sp-api" }
+sc-rpc-api = { git = "https://github.com/paritytech/substrate", package = "sc-rpc-api" }
+sp-blockchain = { git = "https://github.com/paritytech/substrate", package = "sp-blockchain" }
+sp-block-builder = { git = "https://github.com/paritytech/substrate", package = "sp-block-builder" }
+sc-basic-authorship = { git = "https://github.com/paritytech/substrate", package = "sc-basic-authorship" }
+substrate-frame-rpc-system = { git = "https://github.com/paritytech/substrate", package = "substrate-frame-rpc-system" }
+pallet-transaction-payment-rpc = { git = "https://github.com/paritytech/substrate", package = "pallet-transaction-payment-rpc" }
+pallet-contracts-rpc = { git = "https://github.com/paritytech/substrate", package = "pallet-contracts-rpc" }
+
+# These dependencies are used for runtime benchmarking
+frame-benchmarking = { git = "https://github.com/paritytech/substrate", package = "frame-benchmarking" }
+frame-benchmarking-cli = { git = "https://github.com/paritytech/substrate", package = "frame-benchmarking-cli" }
 
 # local dependencies
 pacific-store-runtime = { path = '../runtime', version = '2.0.1' }
@@ -31,33 +63,8 @@ wyvern-exchange-runtime-api = { path = "../pallets/wyvern-exchange/runtime-api" 
 wyvern-exchange-core-rpc = { path = "../pallets/wyvern-exchange-core/rpc" }
 wyvern-exchange-core-runtime-api = { path = "../pallets/wyvern-exchange-core/runtime-api" }
 
-# Substrate dependencies
-frame-benchmarking = '2.0.1'
-frame-benchmarking-cli = '2.0.1'
-pallet-transaction-payment-rpc = '2.0.1'
-sc-basic-authorship = '0.8.1'
-sc-cli = { features = ['wasmtime'], version = '0.8.1' }
-sc-client-api = '2.0.1'
-sc-consensus = '0.8.1'
-sc-consensus-aura = '0.8.1'
-sc-executor = { features = ['wasmtime'], version = '0.8.1' }
-sc-finality-grandpa = '0.8.1'
-sc-rpc = '2.0.1'
-sc-rpc-api = '0.8.1'
-sc-service = { features = ['wasmtime'], version = '0.8.1' }
-sc-transaction-pool = '2.0.1'
-sp-api = '2.0.1'
-sp-block-builder = '2.0.1'
-sp-blockchain = '2.0.1'
-sp-consensus = '0.8.1'
-sp-consensus-aura = '0.8.1'
-sp-core = '2.0.1'
-sp-finality-grandpa = '2.0.1'
-sp-inherents = '2.0.1'
-sp-runtime = '2.0.1'
-sp-transaction-pool = '2.0.1'
-substrate-frame-rpc-system = '2.0.1'
-
+[build-dependencies]
+substrate-build-script-utils = { git = "https://github.com/paritytech/substrate", package = "substrate-build-script-utils" }
 [features]
 default = []
 runtime-benchmarks = ['pacific-store-runtime/runtime-benchmarks']
