--- a/pallets/orderbook/rpc/Cargo.toml
+++ b/pallets/orderbook/rpc/Cargo.toml
@@ -6,20 +6,25 @@ authors = ['']
 repository = ''
 description = "A pallet that nft orders management"
 license = "unlicense"
-
+[dependencies.codec]
+default-features = false
+features = ['derive']
+package = 'parity-scale-codec'
+version = '2.0.0'
 [dependencies]
-codec = { package = "parity-scale-codec", version = "1.3.0" }
-jsonrpc-core = "15.0"
-jsonrpc-core-client = "15.0"
-jsonrpc-derive = "15.0"
-serde = { version = "1.0", features = ["derive"], optional = true }
+jsonrpc-core = "18.0"
+jsonrpc-core-client = "16.0"
+jsonrpc-derive = "16.0"
+serde = { features = ['derive'], optional = true, version = '1.0.119' }
 
 # Substrate packages
 
-sp-api = { version = '2.0.0', default-features = false }
-sp-blockchain = { version = '2.0.0', default-features = false}
-sp-rpc = { version = '2.0.0', default-features = false}
-sp-runtime = { version = '2.0.0', default-features = false}
+
+sp-api = { git = "https://github.com/paritytech/substrate", package = "sp-api", default-features = false }
+
+sp-runtime = { git = "https://github.com/paritytech/substrate", package = "sp-runtime", default-features = false }
+sp-blockchain = { git = "https://github.com/paritytech/substrate", package = "sp-blockchain" }
+sc-rpc = { git = "https://github.com/paritytech/substrate", package = "sc-rpc" }
 
 # local packages
 
