--- a/pallets/orderbook/runtime-api/Cargo.toml
+++ b/pallets/orderbook/runtime-api/Cargo.toml
@@ -4,11 +4,16 @@ version = "2.0.0"
 authors = ['']
 edition = "2018"
 license = "unlicense"
-
+[dependencies.codec]
+default-features = false
+features = ['derive']
+package = 'parity-scale-codec'
+version = '2.0.0'
 [dependencies]
-sp-api = { version = '2.0.0', default-features = false}
-codec = { package = "parity-scale-codec", version = "1.3.4", default-features = false, features = ["derive"] }
-sp-std = { version = "2.0.0", default-features = false }
+
+sp-api = { git = "https://github.com/paritytech/substrate", package = "sp-api", default-features = false }
+sp-std = { git = "https://github.com/paritytech/substrate", package = "sp-std", default-features = false }
+
 [dev-dependencies]
 serde_json = "1.0"
 
