--- a/pallets/wyvern-exchange-core/Cargo.toml
+++ b/pallets/wyvern-exchange-core/Cargo.toml
@@ -12,54 +12,30 @@ license = 'Unlicense'
 default-features = false
 features = ['derive']
 package = 'parity-scale-codec'
-version = '1.3.4'
+version = '2.0.0'
 
-[dependencies.timestamp]
-default_features = false
-package = 'pallet-timestamp'
-version = '2.0.0'
-[dependencies.sp-std]
-default-features = false
-version = '2.0.0'
-# [dependencies.proxy]
-# default-features = false
-# # git = 'https://github.com/substrate-developer-hub/pallet-proxy'
-# package = 'pallet-proxy'
-# version = '2.0.1'
-# [dependencies.serde]
-# features = ['derive']
-# optional = true
-# version = '1.0.101'
 
 [dependencies]
-frame-support = { default-features = false, version = '2.0.0' }
-frame-system = { default-features = false, version = '2.0.0' }
-balances = { package = 'pallet-balances', version = '2.0.0', default-features = false }
-# proxy = { package = 'pallet-proxy', version = '2.0.1', default-features = false }
-# pallet-proxy = { git = "https://github.com/paritytech/substrate", branch = "master", default-features = false }
-# serde = { version = "1.0.121", default-features = false }
-# serde_derive = { version = "1.0.117", optional = true }
-# serde = { version = "1.0.106", optional = true }
-# serde = "1"
-# serde = { version = "1.0", default-features = false, features = ['derive'],optional = true }
+frame-support = { git = "https://github.com/paritytech/substrate", package = "frame-support", default-features = false }
+frame-system = { git = "https://github.com/paritytech/substrate", package = "frame-system", default-features = false }
+sp-core = { git = "https://github.com/paritytech/substrate", package = "sp-core", default-features = false }
+sp-runtime = { git = "https://github.com/paritytech/substrate", package = "sp-runtime", default-features = false }
+sp-std = { git = "https://github.com/paritytech/substrate", package = "sp-std", default-features = false }
+timestamp = { git = "https://github.com/paritytech/substrate", package = "pallet-timestamp", default-features = false }
+balances = { git = "https://github.com/paritytech/substrate", package = "pallet-balances", default-features = false }
 serde = { features = ['derive'], optional = true, version = '1.0.119' }
-sp-core = { default-features = false, version = '2.0.0' }
-
-[dev-dependencies]
-sp-io = { default-features = false, version = '2.0.0' }
-sp-runtime = { default-features = false, version = '2.0.0' }
-# sp-std = {  default-features = false,version = '2.0.0' }
+scale-info = { version = "1.0", default-features = false, features = ["derive"] }
 
 [features]
 default = ['std']
 std = [
     "serde",
     'codec/std',
+'scale-info/std',
     'frame-support/std',
     'frame-system/std',
     'timestamp/std',
-    # 'sp-std/std',
     'balances/std',
 	"sp-core/std",
-    # 'sp-runtime/std',
+    
 ]
