--- a/runtime/Cargo.toml
+++ b/runtime/Cargo.toml
@@ -53,6 +53,43 @@ pallet-contracts-rpc-runtime-api = { git = "https://github.com/paritytech/substr
 [build-dependencies]
 substrate-wasm-builder =  { git = "https://github.com/paritytech/substrate", package = "substrate-wasm-builder" }
 
+[dependencies.orderbook]
+default-features = false
+package = 'pallet-orderbook'
+path = '../pallets/orderbook'
+version = '2.0.0'
+
+[dependencies.orderbook-runtime-api]
+default-features = false
+package = 'orderbook-runtime-api'
+path = '../pallets/orderbook/runtime-api'
+version = '2.0.0'
+
+
+[dependencies.wyvern-exchange]
+default-features = false
+package = 'pallet-wyvern-exchange'
+path = '../pallets/wyvern-exchange'
+version = '2.0.0'
+
+[dependencies.wyvern-exchange-runtime-api]
+default-features = false
+package = 'wyvern-exchange-runtime-api'
+path = '../pallets/wyvern-exchange/runtime-api'
+version = '2.0.0'
+
+[dependencies.wyvern-exchange-core]
+default-features = false
+package = 'pallet-wyvern-exchange-core'
+path = '../pallets/wyvern-exchange-core'
+version = '2.0.0'
+
+[dependencies.wyvern-exchange-core-runtime-api]
+default-features = false
+package = 'wyvern-exchange-core-runtime-api'
+path = '../pallets/wyvern-exchange-core/runtime-api'
+version = '2.0.0'
+
 [features]
 default = [
 	"std",
@@ -87,6 +124,9 @@ std = [
 	"pallet-contracts/std",
 	"pallet-contracts-primitives/std",
 	"pallet-contracts-rpc-runtime-api/std",
+	 'orderbook/std',
+    'wyvern-exchange/std',
+    'wyvern-exchange-core/std',
 ]
 runtime-benchmarks = [
 	"frame-benchmarking",
