--- a/pallets/wyvern-exchange/Cargo.toml
+++ b/pallets/wyvern-exchange/Cargo.toml
@@ -28,6 +28,7 @@ timestamp = { git = "https://github.com/paritytech/substrate", package = "pallet
 balances = { git = "https://github.com/paritytech/substrate", package = "pallet-balances", default-features = false }
 serde = { features = ['derive'], optional = true, version = '1.0.119' }
 scale-info = { version = "1.0", default-features = false, features = ["derive"] }
+pallet-contracts = { git = "https://github.com/paritytech/substrate", package = "pallet-contracts", default-features = false }
 
 [features]
 default = ['std']
