--- a/node/Cargo.toml
+++ b/node/Cargo.toml
@@ -29,13 +29,19 @@ sc-keystore = { git = "https://github.com/paritytech/substrate", package = "sc-k
 sp-inherents = { git = "https://github.com/paritytech/substrate", package = "sp-inherents" }
 sc-transaction-pool = { git = "https://github.com/paritytech/substrate", package = "sc-transaction-pool" }
 sc-transaction-pool-api = { git = "https://github.com/paritytech/substrate", package = "sc-transaction-pool-api" }
+sp-consensus-aura = { git = "https://github.com/paritytech/substrate" }
+sc-consensus-aura = { git = "https://github.com/paritytech/substrate" }
 sp-consensus = { git = "https://github.com/paritytech/substrate", package = "sp-consensus" }
 sc-consensus = { git = "https://github.com/paritytech/substrate", package = "sc-consensus" }
 sc-consensus-manual-seal = { git = "https://github.com/paritytech/substrate", package = "sc-consensus-manual-seal" }
 sc-client-api = { git = "https://github.com/paritytech/substrate", package = "sc-client-api" }
 sp-runtime = { git = "https://github.com/paritytech/substrate", package = "sp-runtime" }
 sp-timestamp = { git = "https://github.com/paritytech/substrate", package = "sp-timestamp" }
-
+frame-system = { git = "https://github.com/paritytech/substrate", package = "frame-system", default-features = false }
+pallet-transaction-payment = { git = "https://github.com/paritytech/substrate", package = "pallet-transaction-payment", default-features = false }
+sc-finality-grandpa = { git = "https://github.com/paritytech/substrate.git" }
+sp-finality-grandpa = {  git = "https://github.com/paritytech/substrate.git" }
+sp-keyring = {git = "https://github.com/paritytech/substrate.git"  }
 # These dependencies are used for the node's RPCs
 jsonrpc-core = "18.0.0"
 sc-rpc = { git = "https://github.com/paritytech/substrate", package = "sc-rpc" }
