--- a/pallets/orderbook/Cargo.toml
+++ b/pallets/orderbook/Cargo.toml
@@ -2,26 +2,34 @@
 name = 'pallet-orderbook'
 version = '2.0.0'
 description = 'NFT Dex order book'
-edition = '2018'
+edition = '2021'
 authors = ['vlbos <https://github.com/vlbos>']
 homepage = ''
 repository = 'https://github.com/vlbos/orderbook/'
 license = 'Unlicense'
 
+[package.metadata.docs.rs]
+targets = ["x86_64-unknown-linux-gnu"]
 [dependencies]
-frame-support = { git = "https://github.com/paritytech/substrate", package = "frame-support", default-features = false }
-frame-system = { git = "https://github.com/paritytech/substrate", package = "frame-system", default-features = false }
+codec = { package = "parity-scale-codec", version = "3.0.0", default-features = false, features = [
+	"derive",
+] }
+scale-info = { version = "2.0.1", default-features = false, features = ["derive"] }
+frame-support = { default-features = false,git = "https://github.com/paritytech/substrate.git"}
+frame-system = { default-features = false,git = "https://github.com/paritytech/substrate.git" }
+frame-benchmarking = { default-features = false,git = "https://github.com/paritytech/substrate.git", optional = true }
 sp-std = { git = "https://github.com/paritytech/substrate", package = "sp-std", default-features = false }
 timestamp = { git = "https://github.com/paritytech/substrate", package = "pallet-timestamp", default-features = false }
 serde = { features = ['derive'], optional = true, version = '1.0.119' }
-scale-info = { version = "1.0", default-features = false, features = ["derive"] }
-sp-runtime = { git = "https://github.com/paritytech/substrate", package = "sp-runtime", default-features = false }
 
-[dependencies.codec]
-default-features = false
-features = ['derive']
-package = 'parity-scale-codec'
-version = '2.0.0'
+[dev-dependencies]
+sp-core = { default-features = false, version = "6.0.0", git = "https://github.com/paritytech/substrate.git" }
+sp-io = { default-features = false, version = "6.0.0", git = "https://github.com/paritytech/substrate.git" }
+sp-runtime = { default-features = false, version = "6.0.0", git = "https://github.com/paritytech/substrate.git" }
+
+
+
+
 
 
 [features]
@@ -35,3 +43,6 @@ std = [
     'timestamp/std',
 'sp-std/std',
 ]
+
+runtime-benchmarks = ["frame-benchmarking/runtime-benchmarks"]
+try-runtime = ["frame-support/try-runtime"]
