--- a/pallets/orderbook/rpc/Cargo.toml
+++ b/pallets/orderbook/rpc/Cargo.toml
@@ -1,22 +1,20 @@
 [package]
 name = "orderbook-rpc"
 version = "2.0.0"
-edition = "2018"
+edition = "2021"
 authors = ['']
 repository = ''
 description = "A pallet that nft orders management"
 license = "unlicense"
-[dependencies.codec]
-default-features = false
-features = ['derive']
-package = 'parity-scale-codec'
-version = '2.0.0'
+
 [dependencies]
 jsonrpc-core = "18.0"
 jsonrpc-core-client = "16.0"
 jsonrpc-derive = "16.0"
 serde = { features = ['derive'], optional = true, version = '1.0.119' }
-
+codec = { package = "parity-scale-codec", version = "3.0.0", default-features = false, features = [
+	"derive",
+] }
 # Substrate packages
 
 
