--- a/pallets/wyvern-exchange/rpc/Cargo.toml
+++ b/pallets/wyvern-exchange/rpc/Cargo.toml
@@ -1,23 +1,21 @@
 [package]
 name = "wyvern-exchange-rpc"
 version = "2.0.0"
-edition = "2018"
+edition = "2021"
 authors = ['']
 repository = ''
 description = ""
 license = "unlicense"
 
-[dependencies.codec]
-default-features = false
-features = ['derive']
-package = 'parity-scale-codec'
-version = '2.0.0'
+
 [dependencies]
 jsonrpc-core = "18.0"
 jsonrpc-core-client = "16.0"
 jsonrpc-derive = "16.0"
 serde = { version = "1.0", features = ["derive"], optional = true }
-
+codec = { package = "parity-scale-codec", version = "3.0.0", default-features = false, features = [
+	"derive",
+] }
 # Substrate packages
 
 
