--- a/runtime/Cargo.toml
+++ b/runtime/Cargo.toml
@@ -16,9 +16,10 @@ targets = ["x86_64-unknown-linux-gnu"]
 codec = { package = "parity-scale-codec", version = "3.0.0", default-features = false, features = ["derive"] }
 scale-info = { version = "2.0.1", default-features = false, features = ["derive"] }
 
-pallet-authorship = { git = "https://github.com/paritytech/substrate", package = "pallet-authorship", default-features = false }
+pallet-aura = {  default-features = false, git = "https://github.com/paritytech/substrate" }
 pallet-balances = { git = "https://github.com/paritytech/substrate", package = "pallet-balances", default-features = false }
 frame-support = { git = "https://github.com/paritytech/substrate", package = "frame-support", default-features = false }
+pallet-grandpa = {  default-features = false,git = "https://github.com/paritytech/substrate" }
 pallet-randomness-collective-flip = { git = "https://github.com/paritytech/substrate", package = "pallet-randomness-collective-flip", default-features = false }
 pallet-sudo = { git = "https://github.com/paritytech/substrate", package = "pallet-sudo", default-features = false }
 frame-system = { git = "https://github.com/paritytech/substrate", package = "frame-system", default-features = false }
@@ -28,6 +29,7 @@ pallet-transaction-payment = { git = "https://github.com/paritytech/substrate", 
 frame-executive = { git = "https://github.com/paritytech/substrate", package = "frame-executive", default-features = false }
 sp-api = { git = "https://github.com/paritytech/substrate", package = "sp-api", default-features = false }
 sp-block-builder = { git = "https://github.com/paritytech/substrate", package = "sp-block-builder", default-features = false }
+sp-consensus-aura = {  default-features = false, git = "https://github.com/paritytech/substrate"}
 sp-core = { git = "https://github.com/paritytech/substrate", package = "sp-core", default-features = false }
 sp-inherents = { git = "https://github.com/paritytech/substrate", package = "sp-inherents", default-features = false }
 sp-offchain = { git = "https://github.com/paritytech/substrate", package = "sp-offchain", default-features = false }
@@ -103,8 +105,9 @@ std = [
 	"frame-support/std",
 	"frame-system-rpc-runtime-api/std",
 	"frame-system/std",
-	"pallet-authorship/std",
+	"pallet-aura/std",
 	"pallet-balances/std",
+	"pallet-grandpa/std",
 	"pallet-randomness-collective-flip/std",
 	"pallet-sudo/std",
 	"pallet-timestamp/std",
@@ -112,6 +115,7 @@ std = [
 	"pallet-transaction-payment/std",
 	"sp-api/std",
 	"sp-block-builder/std",
+	"sp-consensus-aura/std",
 	"sp-core/std",
 	"sp-inherents/std",
 	"sp-offchain/std",
@@ -142,6 +146,7 @@ try-runtime = [
 	"frame-try-runtime",
 	"frame-system/try-runtime",
 	"pallet-balances/try-runtime",
+	"pallet-grandpa/try-runtime",
 	"pallet-randomness-collective-flip/try-runtime",
 	"pallet-sudo/try-runtime",
 	"pallet-timestamp/try-runtime",
