--- a/pallets/wyvern-exchange/rpc/Cargo.toml
+++ b/pallets/wyvern-exchange/rpc/Cargo.toml
@@ -9,6 +9,7 @@ license = "unlicense"
 
 
 [dependencies]
+jsonrpsee = { version = "0.13.0", features = ["server", "macros"] }
 jsonrpc-core = "18.0"
 jsonrpc-core-client = "16.0"
 jsonrpc-derive = "16.0"
